k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-studio-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: 20-241-205-143.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ai-studio-service
                port:
                  number: 80
  tls:
    - hosts:
        - 20-241-205-143.nip.io
      secretName: ai-studio-tls
